# nika

./: .gitignore  CMakeLists.txt  README.md  nika.ini  repo.path
interface/: package-lock.json  package.json
interface/public/: index.html
interface/src/: App.tsx  index.tsx
kb/section_subject_domain_of_infrastructure/: section_subject_domain_of_infrastructure  section_subject_domain_of_infrastructure.scs
kb/section_subject_domain_of_ostis_system_interfaces/: nika_interface.gwf
kb/section_subject_domain_of_people_with_disabilities/: message.gwf  nervotrepka_nasti_old.gwf  phrase_with_template_action.gwf  phrase_with_template_cultural.gwf  phrase_with_template_location.gwf  phrase_with_template_minskkat.gwf  phrase_with_template_pandus.gwf  phrase_with_template_shop_pervomaiskiy.gwf  phrase_with_template_shops.gwf  phrase_with_template_theatre.gwf  phrase_with_template_userlocation.gwf  rule_answer_action.gwf  rule_answer_cultural.gwf  rule_answer_location.gwf  (+13 more)
problem-solver/cxx/gnnLearningModule/: CMakeLists.txt  GNNLearningModule.cpp  GNNLearningModule.hpp
problem-solver/cxx/gnnLearningModule/agent/: GNNLearningAgent.cpp  GNNLearningAgent.hpp
problem-solver/cxx/gnnLearningModule/keynodes/: GNNLearningKeynodes.cpp  GNNLearningKeynodes.hpp
problem-solver/cxx/gnnLearningModule/manager/: GNNLearningManager.cpp  GNNLearningManager.hpp
problem-solver/cxx/gnnLearningModule/model/: Graph.hpp  SampleElement.hpp
problem-solver/cxx/gnnLearningModule/translator/: SampleToJsonFileTranslator.cpp  SampleToJsonFileTranslator.hpp
scripts/: secret.txt
(+213 files in other folders)
